# arqux

./: .gitignore  .patch-cc050-applied  AGENTS.full.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EVIDENCE.md  HANDLERS.md  LICENSE  MANIFEST.in  PERMISSIONS.md  PILOT_MODE.md  README.md  SECURITY.md  SKILL.md  THREAT_MODEL.md  brain.cortex  brain.cortex.bak  coverage.xml  pyproject.toml
.arqux/: agents.cortex  audit-2026-07-06.md  brain.cortex  brain.cortex.bak  brain.cortex.bak-019  heimdall_audit_BLP-033.cortex  manifest.cortex  manifest.md  meta-brain.cortex  meta-brain.md  projects.cortex  projects.md
.arqux/audits/: auditoria-ciclo-04.md
.arqux/cycles/CYCLE-00/: cycle.cortex  cycle.md  pulse.jsonl
.arqux/cycles/CYCLE-01/: MANIFEST.md  cycle.cortex
.arqux/cycles/CYCLE-02/: MANIFEST.md  cycle.cortex
.arqux/cycles/CYCLE-03/: MANIFEST.md  cycle.cortex
.arqux/cycles/CYCLE-04/: MANIFEST.md  cycle.cortex
.arqux/cycles/CYCLE-05/: MANIFEST.md
.arqux/handoffs/: alfred.cortex  heimdall.cortex  jarvis.cortex
.arqux/scripts/: arqux_response_hook.py
.arqux/skills/: blueprint-synthesize.skill.md  cortex.skill.md  protocol.skill.md  workflows.skill.md
.arqux/skills/workflows/: w01-workspace-init.md  w04-reactive-task.md  w05-identity-evolution.md  w06-agent-adoption.md  w07-skill-lifecycle.md  w08-blueprint-lifecycle.md  w09-crud-blocked.md  w10-identity-handoff.md  w11-cortex-file-repair.md  w12-cycle-lifecycle.md
.github/workflows/: ci.yml  release.yml
docs/: ARQUX_EXECUTABLE_AUDIT_PROTOCOL.md  ARQUX_EXECUTABLE_AUDIT_PROTOCOL_2.md  Benchmark_ArqUX_v4_Evolucion.md  diagnostico-niveles.hcortex.md  gov-enforcement-design.md  incidente-mcp-cortex-bypass-remembex-2026-07-14.md  niveles-cortex-arqux.md  sync.md
docs/alfred_vision/: 00-MANIFIESTO.hcortex.md  01-workflows-alfred.hcortex.md  02-arquitectura-nativa.hcortex.md  10-comparativa-arquitecto-alfred.hcortex.md
docs/arch_vision/: handlers-catalogo.hcortex.md  w00-triage.hcortex.md  w01-workspace-init.hcortex.md  w02-govern-project.hcortex.md  w03-session-start.hcortex.md  w04-reactive-task.hcortex.md  w05-identity-evolution.hcortex.md  w06-agent-adoption.hcortex.md  w07-skill-lifecycle.hcortex.md  w08-blueprint-lifecycle.hcortex.md  w09-crud-blocked.hcortex.md  w10-identity-handoff.hcortex.md  w11-cortex-file-repair.hcortex.md  w12-cycle-lifecycle.hcortex.md
docs/architecture/diagrams/: learning-pipeline.puml
docs/audits/: audit-CYCLE-04-coherence-concordance.md  auditoria-ciclo-03-final.cortex  auditoria-ciclo-03-segunda-pasada.cortex  auditoria-ciclo-03.cortex
docs/diagrams/: arquitectura.puml  blp-lifecycle.puml
docs/edge-cases/: concurrent-access.md  invalid-cortex.md  missing-handler.md  missing-identity.md
docs/experience/: experiencia-alfred.md
docs/guides/: GETTING_STARTED.md
docs/lessons/: ciclo-01.md
docs/project/: observaciones-BLP-005.md
docs/reference/: CI_CHECK_BLUEPRINT.md
docs/reference/edge-cases/: empty-brain.md
scripts/: arqux_session_gate.sh  gen_handlers_governance_doc.py  generate_handlers_md.py  rename-product.py  rename-product.sh  validate_templates.py
skills/: INDEX.md  README.md  cycle-retrospective.md  evidence-capture.md  governance-bootstrap.md
src/arqux/: UPGRADE.cortex  __init__.py  __main__.py  backup.py  cli.py  concurrency.py  constants.py  cortex_out.py  dashboard.py  doctor.py  formats.py  identity.py  identity_resolver.py  learning.py  migrator.py  permissions.py  permissions.py.bak  plantuml.py  plantuml_server.py  pulse.py  quickstart.py  security.py  server.py  sessions.py  skill_store.py  state.py  sync.py
src/arqux/blueprint/: __init__.py  template.py
src/arqux/core/: __init__.py  sequencer.py  updater.py
src/arqux/cortex/: __init__.py  parse_content.py  sigils.py
src/arqux/handlers/: __init__.py  blueprint.py  cortex.py  cycle.py  cycle.py.bak  evidence.py  handler.py  project.py  protocol.py  session.py  skill.py  task.py  workspace.py
src/arqux/identities/: README.md  alfred.cortex  auditor.cortex  auditor.md  executor.cortex  executor.md  governor.cortex  governor.md  heimdall.cortex  jarvis.cortex  seshat.cortex
src/arqux/skills/: adoption.skill.md  blueprint-synthesize.skill.md  cortex-internal.skill.md  cortex-out.skill.md  cortex.skill.md  diagram.skill.md  format.skill.md  handlers.skill.md  identities.skill.md  learning.skill.md  mcp-handlers.skill.md  mcp.skill.md  memory.skill.md  protocol.skill.md  re-workflow.skill.md  roles.skill.md  workflows.skill.md
src/arqux/templates/: AGENTS.full.md  AGENTS.lite.md  AGENTS.md  BLP_TEMPLATE.md  CYCLE_MANIFEST_TEMPLATE.md  brain.cortex  brain.md  brain.yaml  learn-policies.cortex  meta-brain.cortex  meta-brain.md  task.cortex  task.md
src/arqux/validators/: __init__.py  (+3 more)
templates_root/: README.md  brain.cortex.tmpl  manifest.cortex.tmpl  meta-brain.cortex.tmpl
tests/: __init__.py  conftest.py  test_auditor_readonly.py  test_backup.py  test_blp003_ref_format.py  test_blp004_read_mode.py  test_blp005_entry_content.py  test_blp006_context_identity.py  test_blp007_008_012_013.py  test_blp009_content_cortex.py  test_blp010_meta_handlers.py  test_blp042_policy.py  test_blueprint_integration.py  test_blueprint_learning.py  test_brain_semantics.py  test_cli.py  test_cli_exit_codes.py  test_concurrency.py  test_cortex_crud.py  test_cortex_memory.py  test_cortex_out.py  test_cortex_read_write_extended.py  test_cortex_verify_cli.py  test_cycle.py  test_cycle_lifecycle.py  test_dashboard.py  test_doctor.py  test_edge_cases.py  test_entry_handlers.py  test_evidence.py  test_file_validate.py  test_find_blueprint_active_cycle.py  test_gate.py  test_identity.py  test_learn_trigger.py  test_learning.py  test_learning_behavioral.py  test_main.py  test_metadata.py  test_migrate_extended.py  (+34 more)
(+157 files in other folders)
