[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arqux"
version = "0.6.2"
description = "Architectural User Experience for governed AI agents. Identity contracts, MCP governance, Blueprint lifecycle, CORTEX memory, and verifiable evidence."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "arqux Maintainers" }
]
requires-python = ">=3.10"
keywords = ["ai-agents", "governance", "mcp", "agent-orchestration", "cortex", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # MCP runtime — Model Context Protocol server primitives.
    "mcp>=1.0.0",
    # CODEC-CORTEX v0.5.2+ — information codec for AI agents (CORTEX/HCORTEX, learning engine).
    # v0.5.2+ REQUIRED: supports the ArqUX BLP-041 schema ($0.1 sub-section with
    # ARQX:artifact metadata). codec-cortex 0.4.0/0.5.0/0.5.1 reject $0.1 with
    # E017_UNPARSED_LINE / E033_ZERO_SECTION_MEMORY_ENTRY, breaking all template
    # and identity validation (see CYCLE-07 T-002). Pin >=0.5.2.
    "codec-cortex>=0.5.2",
    # Utilities.
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
]

[project.scripts]
arqux = "arqux.cli:main"

[project.urls]
Homepage = "https://github.com/FidelErnesto03/arqux"
Repository = "https://github.com/FidelErnesto03/arqux"
Issues = "https://github.com/FidelErnesto03/arqux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arqux" = [
    "templates/*.cortex",
    "templates/*.md",
    "templates/*.cortex.tmpl",
    "templates/*.md.tmpl",
    "identities/*.cortex",
    "identities/*.md",
    "skills/*.skill.md",
    "skills/workflows/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
omit = ["*/plantuml_server.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E741", "E402", "B904", "N811", "N814", "N818", "F403"]

[tool.mypy]
python_version = "3.10"
# P1-O: relax strict mode (was strict=true, generated 399 errors).
# Re-enable strict gradually per-module.
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
